# queri-ai

./: .gitignore  README.md  docker-compose.yml
apis-collection/: README.md  queri-ai.json
backend/: .pre-commit-config.yaml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2026_07_02_0822-69d6258e32e8_baseline.py
backend/app/: main.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: health.py  query.py  schema.py
backend/app/core/: cache.py  config.py  logger.py  rbac.py
backend/app/db/: models.py  reader.py  seeder.py  session.py
backend/app/services/: context.py  embeddings.py  history.py  translator.py  validator.py
backend/app/templates/prompts/: correct.j2  explain.j2  generate.j2
backend/tests/: conftest.py  test_correction.py  test_fewshot.py  test_history.py  test_pruning.py  test_rbac.py  test_routes.py  test_schema.py  test_security.py  test_seeder.py
hl-docs/: README.md  queri-ai-prd.md  sql-assistant-prd.md
hl-docs/backend-docs/: backend-build-plan.md  execution-workflow.md  phase-01-scaffolding.md  phase-02-database-schema.md  phase-03-sql-generation.md  phase-04-safe-execution.md  phase-05-structured-correction.md  phase-06-schema-pruning.md  phase-07-fewshot-rules.md  phase-07b-fewshot-integration.md  phase-08-memory-rbac.md  phase-09-performance-and-caching.md  phase-10-system-resilience.md  phase-11-database-migrations.md
hl-docs/web-docs/: execution-workflow.md  phase-01-scaffolding-theme.md  phase-02-schema-chat-console.md  (+3 more)
scripts/: README.md  backend-server.ps1  stop-servers.ps1
